# SculptorV4

./: CMakeLists.txt  CMakeSettings.json  mod.json
src/hooks/: EditorPauseLayer.cpp  EditorUI.cpp  LevelEditorLayer.cpp
src/lib/: Geometry.cpp  Geometry.hpp  Geometry2.cpp  Geometry2.hpp  Grid.cpp  Grid.hpp  ObjectState.cpp  ObjectState.hpp  UINode.cpp  UINode.hpp  Utilities.cpp  Utilities.hpp
src/mod/: Chain.cpp  Chain.hpp  Component.cpp  Component.hpp  Form.cpp  Form.hpp  Layer.cpp  Layer.hpp  Manager.cpp  Manager.hpp  ModulatablePropertyInput.cpp  ModulatablePropertyInput.hpp  Modulator.cpp  Modulator.hpp  Property.cpp  Property.hpp  PropertyInput.cpp  SelectionPopup.cpp  SelectionPopup.hpp  Serialization.cpp  Serialization.hpp  UI.cpp  UI.hpp  VectorEditor.cpp  VectorEditor.hpp
src/mod/Form/: Component.cpp  Component.hpp  Form.cpp  Form.hpp  Layer.cpp  Layer.hpp  Modulator.cpp  Modulator.hpp  TreeNode.cpp  TreeNode.hpp  VectorEditor.cpp  VectorEditor.hpp
src/mod/UI/: Graph.cpp  Graph.hpp  ModulatablePropertyInput.cpp  ModulatablePropertyInput.hpp  PoolInput.cpp  PoolInput.hpp  PropertyInput.cpp  PropertyInput.hpp  SelectionPopup.cpp  SelectionPopup.hpp  UI.cpp  UI.hpp
